--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
-    "vite": "^7.1.7"
+    "fast-glob": "^3.3.3",
+    "vite": "^7.1.7",
+    "vite-plugin-svg-icons": "^2.0.1"
   }
 }
